Stop using the deprecated URL constructor